k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: placeholder-namespace   # patched per environment in overlay/applicationset
